Fix vertical spacing around hints and solutions.
After switching hints and solutions from being contained in <p>...</p>
to being contained in <div>...</div> the vertical spacing above and
below hints and solutions was removed.  This adds that spacing back.

--- a/htdocs/js/apps/Knowls/knowl.css
+++ b/htdocs/js/apps/Knowls/knowl.css
@@ -9,6 +9,11 @@
 	padding: 0 2px;
 }
 
+.knowl-container {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
 .knowl:hover,
 .knowl.active {
 	border-bottom: 2px solid #aaf;
